Fix libutvideo compilation.

Fixes ticket #985.